--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -269,9 +269,9 @@
 
                 <h2 class="section-title">Los Datos</h2>
                 
-                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basÃ³ en agregados nacionales que oscurecían dinámicas subyacentesâ€”variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
+                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basa en agregados nacionales que oscurecían dinámicas subyacentesâ€”variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
 
-                <p>Al ofrecer medidas consistentes y comparables en un nÃºmero variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideolÃ³gico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cÃ³mo la democracia chilena, alguna vez estable, evolucionÃ³ a través de períodos de reforma institucional y crisis política.</p>
+                <p>Al ofrecer medidas consistentes y comparables en un número variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideológico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cómo la democracia chilena, alguna vez estable, evolucionó a través de períodos de reforma institucional y crisis política.</p>
 
                 <h2 class="section-title">Alcance de la base de datos</h2>
 
@@ -284,7 +284,7 @@
                     <li><strong>Convenciones Constitucionales:</strong> Constituyentes (2022 y 2023)</li>
                 </ul>
 
-                <p>El nÃºmero de distritos varía segÃºn el tipo de elección y período: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografía electoral evolutiva de Chile.</p>
+                <p>El número de distritos varía según el tipo de elección y período: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografía electoral evolutiva de Chile.</p>
 
                 <div class="highlight-box">
                     <strong>Versión actual:</strong> v1.0 · <strong>Tamaño:</strong> 1,8MB · <strong>Actualizado:</strong> Noviembre 2025 · <strong>Versiones futuras:</strong> Se expandirán a medida que ocurran nuevas elecciones
@@ -298,26 +298,26 @@
                 <ul>
                     <li>Tipo de elección, sistema electoral, características distritales</li>
                     <li>Magnitud de distrito (dm), tamaño de asamblea (as), producto de escaños (sp)</li>
-                    <li>NÃºmero de listas, candidatos y candidatos independientes</li>
+                    <li>Número de listas, candidatos y candidatos independientes</li>
                 </ul>
 
                 <p><strong>Indicadores del Sistema de Partidos:</strong></p>
                 <ul>
-                    <li>NÃºmero efectivo de partidos por votos (enpv) y escaños (enps)</li>
+                    <li>Número efectivo de partidos por votos (enpv) y escaños (enps)</li>
                     <li>Medidas NEP a nivel distrital y nacional</li>
-                    <li>Ãndices de nacionalización del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
+                    <li>Índices de nacionalización del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
                 </ul>
 
-                <p><strong>Ãndices de Desproporcionalidad:</strong></p>
+                <p><strong>Índices de Desproporcionalidad:</strong></p>
                 <ul>
                     <li>Rae, Loosemore-Hanby, Lijphart I & II</li>
-                    <li>Ãndices Gallagher, Cox-Shugart</li>
+                    <li>Índices Gallagher, Cox-Shugart</li>
                 </ul>
 
-                <p><strong>Medidas IdeolÃ³gicas:</strong></p>
+                <p><strong>Medidas Ideológicas:</strong></p>
                 <ul>
-                    <li>Ãndices de polarización (Dalton) a nivel distrital y nacional</li>
-                    <li>Posición ideolÃ³gica promedio (av_id)</li>
+                    <li>Índices de polarización (Dalton) a nivel distrital y nacional</li>
+                    <li>Posición ideológica promedio (av_id)</li>
                     <li>Porcentajes de votos mínimos y máximos por lista</li>
                 </ul>
 
@@ -326,7 +326,7 @@
                     <li>Fraccionamiento étnico (ethnic_frac)</li>
                     <li>Porcentajes de población indígena (ethnic_number, ethnic_presence)</li>
                     <li>Votos válidos como proxy del tamaño del distrito</li>
-                    <li>NÃºmero de subunidades (comunas) dentro de los distritos</li>
+                    <li>Número de subunidades (comunas) dentro de los distritos</li>
                 </ul>
 
                 <h2 class="section-title">Aplicaciones de Investigación</h2>
