--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -335,7 +335,7 @@
 
                 <ul>
                     <li>Examinar el momento y los patrones de fragmentación del sistema de partidos</li>
-                    <li>Analizar la reestructuración ideolÃ³gica a nivel distrital</li>
+                    <li>Analizar la reestructuración ideológica a nivel distrital</li>
                     <li>Evaluar el impacto de las reformas electorales (particularmente la reforma de 2015)</li>
                     <li>Estudiar la fragmentación asimétrica en el espectro político</li>
                     <li>Investigar la relación entre diversidad social y resultados electorales</li>
@@ -360,14 +360,14 @@
                 <p>Todas las medidas siguen estándares establecidos de política comparada con la atribución apropiada:</p>
                 <ul>
                     <li><strong>Cálculos NEP:</strong> Laakso & Taagepera (1979)</li>
-                    <li><strong>Ãndices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
+                    <li><strong>Índices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
                     <li><strong>Polarización:</strong> Dalton (2008)</li>
                     <li><strong>Nacionalización:</strong> Jones & Mainwaring (2003), Chhibber & Kollman (2004)</li>
                     <li><strong>Posiciones ideolÃ³gicas:</strong> Bunker (2025)</li>
                     <li><strong>Fraccionamiento étnico:</strong> Alesina et al. (2003), datos del Censo chileno (2002, 2017)</li>
                 </ul>
 
-                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros histÃ³ricos y están documentados en el libro de cÃ³digos.</p>
+                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros históricos y están documentados en el libro de códigos.</p>
 
                 <h2 class="section-title">Citación</h2>
 
