--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -449,12 +449,15 @@
     <div class="container">
         <div class="top-line"></div>
         <header>
-            <div class="logo-container">
-                <img src="logo.svg" alt="CPLD Logo" class="logo-image">
-                <div class="logo-text">
-                    <h1 class="logo">Chilean Political Landscape Dataset</h1>
-                    <p class="tagline">Indicadores electorales y de sistema de partidos a nivel distrital</p>
+            <a href="index-es.html" style="text-decoration: none;">
+                <div class="logo-container">
+                    <img src="logo.svg" alt="CPLD Logo" class="logo-image">
+                    <div class="logo-text">
+                        <h1 class="logo">Chilean Political Landscape Dataset</h1>
+                        <p class="tagline">Indicadores electorales y de sistema de partidos a nivel distrital</p>
+                    </div>
                 </div>
+            </a>
             </div>
             <nav class="nav-tabs">
                 <a href="index-es.html" class="nav-tab active">Inicio</a>
