--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -478,7 +478,7 @@
 
         <div class="mailing-section">
     <h2>Suscríbete a noticias</h2>
-    <p>Nuevas versiones, notas de investigación y seminarios.</p>
+    <p>Nuevas versiones, publicaciones y seminarios.</p>
 
     <form action="https://docs.google.com/forms/d/e/1FAIpQLSfrXMlFNZjMrfNgybhZOzF0jwHnFxKxWOrz8E6McFQjmVj8hA/formResponse" 
           method="POST" target="_blank">
