--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -92,6 +92,7 @@
             color: var(--black);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
+            padding-top: 2rem;
         }
 
         .container {
@@ -120,13 +121,13 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         .logo-image {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             flex-shrink: 0;
         }
 
@@ -134,7 +135,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .nav-tabs {
@@ -169,12 +170,14 @@
             color: var(--black);
             margin-bottom: 0.5rem;
             letter-spacing: -0.02em;
+            line-height: 1.1;
         }
 
         .tagline {
             font-size: 1.1rem;
             color: var(--grey-dark);
             font-weight: 400;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
@@ -210,7 +213,7 @@
             border-bottom: 1px solid var(--grey-light);
         }
 
- .mailing-section {
+.mailing-section {
     margin: 2rem 0 3rem;
     padding: 1rem 0;
     border-top: 1px solid var(--grey-light);
@@ -265,10 +268,9 @@
     border-radius: 3px;
 }
 
-       .stat {
+        .stat {
             text-align: left;
         }
-
 
         .stat-number {
             font-family: 'JetBrains Mono', monospace;
@@ -335,7 +337,7 @@
         }
 
         .link-meta {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: var(--grey-mid);
             margin-top: 0.25rem;
             font-weight: 300;
@@ -381,9 +383,10 @@
 
         footer {
             margin-top: 5rem;
+            padding-top: 2rem;
             border-top: 1px solid var(--grey-light);
             color: var(--grey-mid);
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
 
         footer a {
@@ -443,7 +446,7 @@
                 max-width: none;
             }
         }
-        
+
     </style>
 </head>
 <body>
