--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -475,7 +475,7 @@
         <h1 class="page-title">Descripción General</h1>
 
         <div class="description">
-            <p>El <strong>Chilean Political Landscape Dataset (CLPD)</strong> es una base de datos longitudinal de <strong>resultados electorales a nivel distrital</strong> que abarca cuatro décadas de democracia chilena. Contiene medidas estandarizadas de fragmentación del sistema de partidos, orientación ideológica y cambio institucional en contiendas legislativas, regionales y municipales. <strong>La versión 1.0</strong> contiene 5.301 observaciones y se expandirá a medida que nuevos datos electorales estén disponibles.</p>
+            <p>El Chilean Political Landscape Dataset (CLPD) es una base de datos longitudinal de resultados electorales a nivel distrital que abarca cuatro décadas de democracia chilena. Contiene medidas estandarizadas de fragmentación del sistema de partidos, orientación ideológica y cambio institucional en contiendas legislativas, regionales y municipales. La versión 1.0 contiene 5.301 observaciones y se expandirá a medida que nuevos datos electorales estén disponibles.</p>
             <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Formatos de datos optimizados para flujos de trabajo en Python (pandas) y R (tidyverse).</p>
         </div>
 
@@ -674,10 +674,11 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
         </section>
 
         <footer>
-            <p>Kenneth Bunker</p>
+            <p>Chilean Political Landscape Dataset</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
         </footer>
+
     </div>
 </body>
 </html>
