--- a/cpld/index.html
+++ b/cpld/index.html
@@ -475,7 +475,7 @@
         <h1 class="page-title">Overview</h1>
 
         <div class="description">
-            <p>The <strong>Chilean Political Landscape Dataset (CLPD)</strong> is a longitudinal dataframe of <strong>district-level electoral outcomes</strong> spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
+            <p>The Chilean Political Landscape Dataset (CLPD) is a longitudinal dataframe of district-level electoral outcomes spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. Version 1.0 contains 5,301 observations and will expand as new electoral data become available.</p>
             <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Data formats optimized for Python (pandas) and R (tidyverse) workflows.</p>
         </div>
 
@@ -681,4 +681,4 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
         </footer>
-            padding-top: 2rem;
+
