--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -386,8 +386,9 @@
         </main>
 
         <footer>
-            <p>Kenneth Bunker</p>
+            <p>Chilean Political Landscape Dataset</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
         </footer>
-            padding-top: 2rem;
+
+            
