--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -338,6 +338,8 @@
         </main>
 
         <footer>
-            <p>Kenneth Bunker</p>
-            <p style="m
-            padding-top: 2rem;
+            <p>Chilean Political Landscape Dataset</p>
+            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
+        </footer>
+
