--- a/cpld/index.html
+++ b/cpld/index.html
@@ -677,8 +677,8 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
         </section>
 
         <footer>
-            <p>Kenneth Bunker</p>
+            <p>Chilean Political Landscape Dataset</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
         </footer>
 
