--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -319,7 +319,7 @@
 
             <div class="info-box">
                 <h3>Colaboración en Investigación</h3>
-                <p>Â¿Interesado en colaborar en investigación usando el CPLD? Damos la bienvenida a consultas sobre proyectos conjuntos, oportunidades de coautoría y extensiones de datos.</p>
+                <p>¿Interesado en colaborar en investigación usando el CPLD? Damos la bienvenida a consultas sobre proyectos conjuntos, oportunidades de coautoría y extensiones de datos.</p>
                 <p>Por favor incluya una breve descripción de sus intereses de investigación y la colaboración propuesta.</p>
             </div>
 
