--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -269,7 +269,7 @@
 
                 <h2 class="section-title">Los Datos</h2>
                 
-                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basa en agregados nacionales que oscurecían dinámicas subyacentesâ€”variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
+                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basa en agregados nacionales que oscurecían dinámicas subyacentes y variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
 
                 <p>Al ofrecer medidas consistentes y comparables en un número variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideológico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cómo la democracia chilena, alguna vez estable, evolucionó a través de períodos de reforma institucional y crisis política.</p>
 
@@ -348,8 +348,8 @@
                 <p>La investigación usando el CPLD ha revelado conocimientos importantes que desafían la sabiduría convencional:</p>
 
                 <ul>
-                    <li><strong>La fragmentación comenzÃ³ antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentación del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
-                    <li><strong>Desplazamiento ideolÃ³gico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
+                    <li><strong>La fragmentación comenzó antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentación del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
+                    <li><strong>Desplazamiento ideológico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
                     <li><strong>Fragmentación asimétrica:</strong> La fragmentación se ha concentrado desproporcionadamente en la izquierda, con más partidos pero más pequeños en comparación con la derecha</li>
                 </ul>
 
