--- a/index.html
+++ b/index.html
@@ -2413,7 +2413,9 @@ ong>El Muro</strong>. <a href="http://elmuro.cl/noticias/ps-la-dc-los-partidos-t
 <ul>
 
 
+<li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2026-02-20/us-restricts-visas-for-chile-officials-citing-regional-security?utm_source=website&utm_medium=share&utm_campaign=twitter&embedded-checkout=true">US Revokes Visas for Chile Officials Over China Cable Plan.</a> 20 February, 2026.</li>
 
+<li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/el-mundo/kast-se-prepara-para-asumir-en-chile-motosierra-batalla-cultural-y-una-apuesta-arriesgada-con-su-nid14022026/">Kast se prepara para asumir en Chile: “motosierra”, batalla cultural y una apuesta arriesgada con su gabinete.</a> 14 February, 2026.</li> 
 
 <li><strong>El Comercio</strong>. <a href="https://elcomercio.pe/mundo/latinoamerica/jose-antonio-kast-mano-dura-contra-el-crimen-y-la-migracion-irregular-en-chile-los-desafios-del-presidente-electo-para-cumplir-su-mayor-promesa-gabriel-boric-tren-de-aragua-tlcnota-noticia/">El plan de “mano dura” de Kast y cómo hará para sacar de Chile a los migrantes irregulares en sus primeros 90 días de gobierno.</a> 17 December, 2025.</li> 
 
