--- a/diplomado/index.html
+++ b/diplomado/index.html
@@ -684,7 +684,7 @@
       <div class="unit-header">
         <div class="unit-num">Unidad 04 · 8 clases</div>
         <div class="unit-title">Análisis de Datos Políticos con R</div>
-        <div class="unit-prof">José Miguel Cabezas</div>
+        <div class="unit-prof">Marcel Aubry</div>
       </div>
       <div class="unit-classes">
         <div class="class-item"><span class="class-num">4.1</span>Introducción a R y RStudio: entorno, objetos y flujo de trabajo</div>
@@ -694,7 +694,7 @@
         <div class="class-item"><span class="class-num">4.5</span>Regresión lineal y logística para modelar comportamiento electoral</div>
         <div class="class-item"><span class="class-num">4.6</span>Análisis de encuestas: ponderación, diseño muestral y márgenes de error</div>
         <div class="class-item"><span class="class-num">4.7</span>Web scraping y acceso a datos abiertos: SERVEL, BCN y APIs públicas</div>
-        <div class="class-item"><span class="class-num">4.8</span>Comunicación de resultados: R Markdown, Quarto y reportes reproducibles</div>
+        <div class="class-item"><span class="class-num">4.8</span>Producción de informes legislativos: análisis de votaciones, actividad parlamentaria y reportes reproducibles</div>
       </div>
     </div>
 
@@ -739,9 +739,9 @@
     <div class="professor-card">
       <div class="prof-color-bar bar-4"></div>
       <div class="prof-role">Docente</div>
-      <div class="prof-avatar av-4">JC</div>
-      <div class="prof-name">José Miguel Cabezas</div>
-      <div class="prof-bio">Cientista político y especialista en métodos cuantitativos aplicados a las ciencias sociales. Experto en análisis estadístico con R, modelación electoral y ciencia de datos políticos. Combina rigor metodológico con aplicación práctica en el contexto chileno y latinoamericano.</div>
+      <div class="prof-avatar av-4">MA</div>
+      <div class="prof-name">Marcel Aubry</div>
+      <div class="prof-bio">Especialista en métodos cuantitativos y ciencia de datos aplicada a la política. Experto en análisis estadístico con R, visualización de datos legislativos y producción de informes parlamentarios. Combina rigor metodológico con herramientas prácticas para el análisis del Congreso, la actividad legislativa y el comportamiento electoral en Chile.</div>
       <div class="prof-unit">Unidad 04 · Análisis de Datos con R</div>
     </div>
 
